Integración de Cloudinary y corrección de errores 500